<resources>
    <string name="app_name">WantedXTickets</string>
    <string name="create_account">Create Account</string>
    <string name="account_information">Account Information</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="account_name">SN:</string>
    <string name="post_it">Post It!</string>
    <string name="wanted_tickets">Wanted X Tickets</string>
    <string name="hip_hop_title">Hip-Hop</string>
    <string name="festival_title">Music Festivals</string>
    <string name="country_title">Country</string>
    <string name="edm_title">EDM</string>
    <string name="musical_title">Musical</string>
    <string name="user">User: </string>
    <string name="cp_post">Post Title: </string>
    <string name="cp_prices">Price: $$</string>
    <string name="cp_dates">Date: </string>
    <string name="cp_image">Upload Image:</string>
    <string name="cp_hint_dates">Exp (MM/DD/YYYY)</string>
    <string name="cp_description">Description: </string>
    <string name="cp_upload">Upload</string>
    <string name="cp_select">Select</string>
    <string name="max_strings">Max of 400 texts</string>
    <string name="submit_buttons">Submit!</string>
    <string name="submitClickHandler">SubmitClickHandler</string>
    <string-array name="genres_lists">
        <item>EDM</item>
        <item>HIP-HOP</item>
        <item>COUNTRY</item>
        <item>MUSICAL</item>
        <item>MUSIC FESTIVALS</item>
    </string-array>
    <string name="title_activity_create_post">CreatePost</string>
</resources>
