<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create_account"
        android:title="@string/create_account"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_account_information"
        android:title="@string/account_information"
        android:orderInCategory="2"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_log_in"
        android:title="@string/log_in"
        android:orderInCategory="3"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_log_out"
        android:title="@string/log_out"
        android:orderInCategory="4"
        app:showAsAction="never"
        />

</menu>